(theme) fixed expandable pagination not showing all pages

--- a/Themes/default/css/base.css
+++ b/Themes/default/css/base.css
@@ -1015,7 +1015,6 @@ span.brd_moderators_chld {
 /* pagelinks (pagination) */
 
 div.pagelinks {
-	height: 24px;
 	line-height: 24px;
 }
 a.navPages, .pagelinks span.current, .pagelinks span.prefix {
